<resources>
    <string name="app_name">Mascotas</string>

    <string name="nombre_mascota">SHIH TZU</string>
    <string name="numlikes">5</string>
    <string name="mascotasfavoritas">MASCOTAS FAVORITAS</string>

    <string name="menu_about">Acerca de</string>
    <string name="menu_contact">Contacto</string>
    <string name="settings">Configurar Cuenta</string>
    <string name="Notification">Recibir Notificacion</string>
    <string name="Seguir">Seguir</string>
    <string name="top">top</string>

    <string name="nombre">Nombre Completo</string>
    <string name="emaildestinatario">Email a quien enviaras este correo</string>
    <string name="comentarios">Comentarios</string>
    <string name="boton1">Enviar Email</string>


    <string name="nbio">Omar Hidrogo</string>
    <string name="pets">MASCOTAS</string>

    <string name="login">Escribe tu Usuario</string>

    <string name="texto_accion_seguir">Seguir</string>
    <string name="texto_accion_noseguri">Dejas de Seguir</string>
    <string name="verperfil">Ver Perfil</string>


    <string name="biografia">Omar de Jesus Hidrogo Muñoz (Torreon, Coahuila, 8 de diciembre de 1990     Actualmente Ing. en Tecnologias de la Informacion y Comunicacion
        Egresado de la Universidad Tecnologica de Torreon en el año 2014   </string>
    <string name="biop2">En el año 2015 se incorpore al actual trabajo como Ing. en Sistemas donde una de las funciones es dar soporte a todos los usuarios de la empresa,
    Infraestructura de red, Administrador de Servidores entre otros.</string>
    <string name="biop3">Mis pasatiempos son leer, caminar, escuchar musica, ir al cine y hacer ejercicio</string>
</resources>
