<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/top"
        android:title="@string/top"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/estrellas">

    </item>

    <item
        android:id="@+id/mContact"
        android:orderInCategory="101"
        android:title="@string/menu_contact">
    </item>

   <item
       android:id="@+id/acerca"
        android:orderInCategory="102"
       android:title="@string/menu_about">
    </item>

    <item
        android:id="@+id/settings"
        android:orderInCategory="103"
        android:title="@string/settings">
    </item>

    <item
        android:id="@+id/notification"
        android:orderInCategory="104"
        android:title="@string/Notification">
    </item>

    <!--<item
        android:id="@+id/relationship"
        android:orderInCategory="105"
        android:title="@string/Seguir">
    </item>-->





</menu>